# rtsm

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
api/rest-api/: index.html
api/websocket/: index.html
concepts/architecture/: index.html
concepts/memory-model/: index.html
concepts/perception-pipeline/: index.html
config/: rtsm.yaml
config/clip/: vocab.yaml
contributing/: index.html
d435i/: zmq_streaming.py
demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/server/: broadcaster.py  main.py  processor.py  registry.py  requirements.txt  zmq_listener.py
demo/src/: main.ts  three-examples.d.ts
docs/: contributing.md  index.md
docs/api/: rest-api.md  websocket.md
docs/concepts/: architecture.md  memory-model.md  perception-pipeline.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: realsense-setup.md  rtabmap-setup.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/realsense-setup/: index.html
guides/rtabmap-setup/: index.html
overrides/partials/: footer.html
rtsm/: __main__.py  run.py
rtsm/api/: server.py
scripts/: README.md  fetch_clip.py  replay_dataset.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: test_faiss_client.py  test_ingest_gate.py  test_keyframe.py  test_min_area_filter.py  test_ros.py  test_zmq.py
(+58 files in other folders)
